--- a/windows/CMakeLists.txt
+++ b/windows/CMakeLists.txt
@@ -39,11 +39,17 @@ add_definitions(-DUNICODE -D_UNICODE)
 # of modifying this function.
 function(APPLY_STANDARD_SETTINGS TARGET)
   target_compile_features(${TARGET} PUBLIC cxx_std_17)
-  target_compile_options(${TARGET} PRIVATE /W4 /WX /wd"4100")
-  target_compile_options(${TARGET} PRIVATE /EHsc)
+
+  if (MSVC)
+    # Use /MD to link against DLL version of the runtime (fixes Firebase linker errors)
+    target_compile_options(${TARGET} PRIVATE /MD /W4 /WX /wd"4100" /FS)
+    target_compile_options(${TARGET} PRIVATE /EHsc)
+  endif()
+
   target_compile_definitions(${TARGET} PRIVATE "_HAS_EXCEPTIONS=0")
   target_compile_definitions(${TARGET} PRIVATE "$<$<CONFIG:Debug>:_DEBUG>")
 endfunction()
+
 
 # Flutter library and tool build rules.
 set(FLUTTER_MANAGED_DIR "${CMAKE_CURRENT_SOURCE_DIR}/flutter")
